--- a/package.json
+++ b/package.json
@@ -9,13 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.131",
+    "@mui/material": "^5.13.2",
+    "@mui/x-date-pickers": "^6.5.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "formik": "^2.2.9",
+    "formik-mui": "^5.0.0-alpha.0",
+    "formik-mui-lab": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.8.0",
+    "react-js-pagination": "^3.0.3",
+    "react-query": "^3.39.3",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2",
+    "swr": "^2.1.5",
+    "tailwindcss": "3.3.2",
+    "yup": "^1.1.1"
   }
 }
